# azercell_project3

./: README.md  docker-compose.yml
.github/workflows/: ci-build.yaml
backend/: README.md  app.py  pyproject.toml
backend/src/models/: predict_model.py
frontend/: Dockerfile  README.md  app.py  pyproject.toml
frontend/.streamlit/: config.toml
